[package]
name = "sacn"
description = "Rust sACN implementation."
version = "0.9.0"
readme = "README.md"
keywords = ["acn", "sacn", "dmx", "e131", "ansi"]
authors = ["Lukas Schmierer <lukas.schmierer@lschmierer.de>", "Paul Lancaster <paul@lancasterzone.com>"]
documentation = ""
repository = "https://github.com/mthespian/sacn-rust"
license = "MIT OR Apache-2.0"
edition = "2015"

[dependencies]
byteorder = { version = "1.2.2", features = [] }
socket2 = { version = "0.3.4", features = ["reuseport"] }
libc = { version = "0.2.67" }

lazy_static = "1.4.0"
error-chain = "0.12.2"

uuid = { version = "0.6.3", features = ["v4"] }

[features]
default = ["std"]
std = ["uuid/use_std"]
